hphp/hack/test/typecheck/references/byref_on_construct.php.exp
File "byref_on_construct.php", line 4, characters 54-54:
Encountered unexpected token '&'. (Parsing[1002])
