hphp/hack/test/typecheck/references/byref_on_construct.php
<?hh // partial

final class C {
  public function __construct(private int $x, string &$y) {
    $y = 'bar';
  }
}
